--- a/system_id/plant.tex
+++ b/system_id/plant.tex
@@ -7,7 +7,7 @@
         \label{fig:floating_pend}
     \end{figure}
 
-    \paragraph{Derived model}
+    \paragraph
     Figure \ref{fig:floating_pend} shows the plant considered for system identification.
     In Chapter~\ref{chap:modelling} the differential equations that describe the motion of this system are derived with Lagrangian mechanics.
     From these equations it is clear that the considered plant is defined by the state vector,
