--- a/system_id/system_id.tex
+++ b/system_id/system_id.tex
@@ -3,7 +3,7 @@
 \chapter{System identification}
 \label{chap:system_id}
 
-    \paragraph{}
+    \paragraph
     System identification is the process of creating a mathematical model of a dynamical system by using input and output measurements of that system.
     Two major approaches are used to represent the dynamics of such a system:
     \begin{enumerate}
@@ -11,7 +11,7 @@
         \item Data-driven system identification
     \end{enumerate}
 
-    \paragraph{}
+    \paragraph
     This chapter discusses these system identification approaches and describes the differences between them.
     For each approach, different estimation techniques are explained and applied to the quadrotor and payload system.
     The results of these techniques are then compared to each other.
@@ -25,7 +25,7 @@
 
     \section{Conclusion}
 
-        \paragraph{}
+        \paragraph
         DMDc and HAVOK produce very similar prediction errors for a range of different simulation conditions.
         HAVOK generally has slightly lower errors, but this may have a negligible effect on control.
         DMDc will be used in the remainder of this work 
@@ -49,12 +49,12 @@
         % The major advantage of the data-driven approach which was demonstrated in this section 
         % is that the method was applied to different dynamical systems   
 
-        % \paragraph{}
+        % \paragraph
         % For each of these payload cases, a different parameter estimation based techniques would needs to be designed for effective control.
         % This is undesirable for practical drone deliveries, especially when the type of paylaod is not known well in advance or changes regularly.
         % A data-driven technique provides a more general solution since it accommodates a larger range of payload types and does not require a prioir modelling information.
             
-        % \paragraph{}
+        % \paragraph
         % Since the a priori white-box model is based on a single pendulum model, 
         % the dynamics described by the model are significantly different from the actual dynamics.
         % This will have a detrimental effect on the control performance of a controller based on such a model,
