--- a/system_id/white_black_box.tex
+++ b/system_id/white_black_box.tex
@@ -1,6 +1,6 @@
 \section{White-box and black-box techniques}
 
-    \paragraph{}
+    \paragraph
     Models determined from data-driven system identification methods are generally called black-box models.
     This is because the user figuratively cannot ``see inside the box" 
     to understand the inner-workings of the model.
@@ -11,7 +11,7 @@
 
     \subsection{White-box techniques}
 
-        \paragraph{} 
+        \paragraph 
         The underlying physics of a white-box model is understood by the user because    
         it is determined from first principles.
         This is done by modelling physical processes with techniques like Lagrangian mechanics or Newton equations.
@@ -20,7 +20,7 @@
         The system identification process is therefore reduced to parameter estimation 
         which determines values for parameters used in die model.
 
-        \paragraph{} 
+        \paragraph 
         This approach is used by \cite{Erasmus2020} and \cite{Slabber2020} for swing damping control of a quadrotor with an unknown suspended payload.
         The system was modelled as two rigid bodies connected by a link and the following assumptions were made regarding the suspended payload:
         \begin{itemize}
@@ -33,7 +33,7 @@
         These parameters are first estimated and then inserted into the predefined, linearised model.
         This model is used by a LQR controller to damp swing angles while also controlling the vehicle.
 
-        \paragraph{} 
+        \paragraph 
         The approach works well for systems with predictable dynamics, but it is not very adaptable.
         The payload considered by \cite{Erasmus2020} and \cite{Slabber2020} is limited to a small rigid mass suspended from the quadrotor by a non-stretching cable. 
         In this use case it was shown that a LQR controller successfully controls a quadrotor while minimising payload swing angles.
@@ -42,7 +42,7 @@
 
     \subsection{Black-box techniques}
 
-        \paragraph{}
+        \paragraph
         Data-driven system identification methods produce black-box models.
         These models do not require predefined mathematical relations between system parameters.
         % The user only considers what goes into, and comes out of, the black-box.
@@ -50,13 +50,13 @@
         No prior knowledge of the physics of the system are considered and no modelling assumptions are made.
         Black-box techniques determine the mathematical relationship between inputs and outputs of a system using information from measurement data only.
 
-        \paragraph{}
+        \paragraph
         Black-box models can be categorised as either non-linear or linear models.
         Non-linear models are often more accurate than linear models because complex, real-world dynamics are better approximated by non-linear systems.
         The dynamics of a quadrotor and suspended payload are also non-linear.
         Examples of black box models with quadrotors and payloads in literature ???
 
-        \paragraph{}
+        \paragraph
         However, non-linear models are inherently more complex than linear models. 
         Controllers that use non-linear models are usually more computationally complex than those with linear models.
         Control archetictures for quadrotors used in practical applications are mostly implemented on onboard hardware.
@@ -64,7 +64,7 @@
         trade-off between accuracy and complexity.
         Non-linear models may require control implementations that are too computationally expensive and may not be practically realisable on the available hardware on a quadrotor.
         
-        \paragraph{}
+        \paragraph
         DMDc and HAVOK are the two data-driven system identification methods investigated in this paper. 
         These are linear regression techniques that produce a linear model to approximate non-linear dynamics.
         Non-linear data-driven techniques like Neural Networks and SINDy \cite{Brunton2016} may produce models that are more accurate than linear techniques, 
@@ -73,11 +73,11 @@
         DMDc and HAVOK are less computationally complex and their models are suitable for linear MPC, which is significantly faster than non-linear MPC.
         This is desirable for the quadrotor use case, where onboard computational power is limited.
         
-        \paragraph{}
+        \paragraph
         These techniques and their implementation are explained in the sections below.
         Each technique is considered for use in a velocity controller in the North direction
 
-        \paragraph{}
+        \paragraph
         % As discussed in \ref{sec:linear_model}, the payload has minimal effect on quadrotor attitude because it is attached near the CoM of the vehicle.
         % Therefore the attitude states are excluded from the system identification model.
         The model identified by DMDc or HAVOK will be used to design a longitudinal velocity controller.
