--- a/stellenbosch_ee_report.tex
+++ b/stellenbosch_ee_report.tex
@@ -154,6 +154,9 @@
 \let\Oldsubsubsection\subsubsection
 \renewcommand{\subsubsection}{\FloatBarrier\Oldsubsubsection}
 
+\let\Oldparagraph\paragraph
+\renewcommand{\paragraph}{\Oldparagraph{} \noindent \phantom{'} }
+
 % Glossary
 % \usepackage[acronym, nomain, nopostdot, nonumberlist, nogroupskip, toc, automake=false]{glossaries}
 %\loadglsentries{glossary}
@@ -175,6 +178,9 @@
 % \input{frontmatter/nomenclature}
 \newpage
 \pagenumbering{arabic}
+
+% % Paragraphs
+% \setlength{\parindent}{0pt}
 
 % Contents
 \input{introduction/introduction.tex}
