--- a/stellenbosch_ee_report.tex
+++ b/stellenbosch_ee_report.tex
@@ -154,8 +154,9 @@
 \let\Oldsubsubsection\subsubsection
 \renewcommand{\subsubsection}{\FloatBarrier\Oldsubsubsection}
 
+% Paragraphs
 \let\Oldparagraph\paragraph
-\renewcommand{\paragraph}{\Oldparagraph{} \noindent \phantom{'} }
+\renewcommand{\paragraph}{\Oldparagraph{} \noindent \phantom{'} \negthinspace}
 
 % Glossary
 % \usepackage[acronym, nomain, nopostdot, nonumberlist, nogroupskip, toc, automake=false]{glossaries}
@@ -178,9 +179,6 @@
 % \input{frontmatter/nomenclature}
 \newpage
 \pagenumbering{arabic}
-
-% % Paragraphs
-% \setlength{\parindent}{0pt}
 
 % Contents
 \input{introduction/introduction.tex}
